able to resolve remove mansory spacing

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -82,6 +82,10 @@ body{
       color:silver;
     }
 }
+.box-item {
+    margin: 0px;
+}
+
 // .foursquarerecommendedpanel{
 //   background:#7F0710;
 //   color:white;
